--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://vinayman.github.io/",
   "private": true,
   "name": "vinaymanektalla",
   "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
@@ -7,6 +8,7 @@
   "license": "0BSD",
   "starter-name": "gatsby-starter-portfolio-cara",
   "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public --user \"Vinay Manektalla <vinaymanektalla@gmail.com>\"",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "develop:cypress": "cross-env CYPRESS_SUPPORT=y yarn develop",
@@ -33,6 +35,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "gh-pages": "^3.2.3"
   }
 }
